# wam_message_gatling

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: rust-ci.yml
src/: gatling_core.rs  lib.rs  main.rs  message.rs  wasm_binding.rs
src/sender/: kafka.rs  mod.rs  wamserver.rs
tests/: message_tests.rs  wamserver_tests.rs
