[package]
name = "wam_message_gatling"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures = "0.3.31"
kafka = "0.10.0"
log = "0.4.27"
reqwest = { version = "0.12.22" , features = ["json"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
tokio_schedule = "0.3.2"
